[gd_scene load_steps=15 format=3 uid="uid://bkys2t0p55b7n"]

[ext_resource type="Texture2D" uid="uid://sfbb5vw7talb" path="res://assets/characters/Sage/Attack.png" id="1_00uuy"]
[ext_resource type="Script" path="res://scripts/sage.gd" id="1_okmjv"]
[ext_resource type="Texture2D" uid="uid://dcrfw6sctr84o" path="res://assets/characters/Sage/Idle.png" id="2_we2ja"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rdpyg"]
atlas = ExtResource("1_00uuy")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqrp5"]
atlas = ExtResource("2_we2ja")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ro68"]
atlas = ExtResource("1_00uuy")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a54yi"]
atlas = ExtResource("2_we2ja")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jixu"]
atlas = ExtResource("1_00uuy")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubsg8"]
atlas = ExtResource("2_we2ja")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v8s4"]
atlas = ExtResource("1_00uuy")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0n05"]
atlas = ExtResource("2_we2ja")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uwpy"]
atlas = ExtResource("2_we2ja")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_t2j2c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdpyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqrp5")
}],
"loop": false,
"name": &"attack_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ro68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a54yi")
}],
"loop": false,
"name": &"attack_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jixu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubsg8")
}],
"loop": false,
"name": &"attack_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v8s4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0n05")
}],
"loop": false,
"name": &"attack_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uwpy")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rfgn5"]
radius = 24.0

[node name="Sage" type="Node2D"]
script = ExtResource("1_okmjv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_t2j2c")
animation = &"attack_down"
autoplay = "idle_down"

[node name="AttackCooldown" type="Timer" parent="."]

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_rfgn5")

[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
